# coworking_api

./: .env  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/coworking/: main.py
src/coworking/api/: auth.py  booking.py  rooms.py  slots.py  users.py
src/coworking/core/: db.py  db_config.py  jwt_config.py
src/coworking/dependencies/: auth.py  repositories.py  security.py  slots.py  types.py
src/coworking/models/: __init__.py  rooms.py  users.py
src/coworking/schemas/: rooms.py  users.py
src/coworking/services/: security.py
src/coworking/services/repositories/: baseRepo.py  roomsRepo.py  usersRepo.py
